fix link bg gap

--- a/src/style.scss
+++ b/src/style.scss
@@ -51,9 +51,7 @@ nav.navbar.navbar-expand-md {
 .link-to-baby-gallery:hover::after {
   opacity: 1;
 }
-.link-to-baby-gallery:hover {
-  opacity: 0.5;
-}
+
 .link-to-family-gallery::after {
   content: "family";
   opacity: 0;
@@ -62,9 +60,7 @@ nav.navbar.navbar-expand-md {
 .link-to-family-gallery:hover::after {
   opacity: 1;
 }
-.link-to-family-gallery:hover {
-  opacity: 0.5;
-}
+
 .link-to-portrait-gallery::after {
   content: "portrait";
   opacity: 0;
@@ -73,9 +69,7 @@ nav.navbar.navbar-expand-md {
 .link-to-portrait-gallery:hover::after {
   opacity: 1;
 }
-.link-to-portrait-gallery:hover {
-  opacity: 0.5;
-}
+
 .link-to-event-gallery::after {
   content: "event";
   opacity: 0;
@@ -84,15 +78,17 @@ nav.navbar.navbar-expand-md {
 .link-to-event-gallery:hover::after {
   opacity: 1;
 }
-.link-to-event-gallery:hover {
-  opacity: 0.5;
-}
 
 .links-to-gallery {
   transition: width 2s, height 2s, background-color 2s, transform 2s;
-}
-.link-to-gallery {
-  border: 1.9rem solid rgba(115, 141, 29, 0.5);
+  a {
+    padding: 1.9rem;
+    background-color: rgba(115, 141, 29, 0.5);
+    transition: opacity 0.2s ease-in;
+  }
+  a:hover {
+    opacity: 0.5;
+  }
 }
 
 .table td,
@@ -140,10 +136,13 @@ h2 {
   animation: come-in 0.5s ease forwards;
 }
 .come-in:nth-child(odd) {
-  animation-duration: 0.6s; /* So they look staggered */
+  animation-duration: 0.4s; /* So they look staggered */
 }
 
 @keyframes come-in {
+  from {
+    transform: scale(0.75) translateY(0);
+  }
   to {
     transform: scale(1) translateY(0);
   }
